firebase sign-up added

--- a/src/App.css
+++ b/src/App.css
@@ -1,14 +1,26 @@
 * {
     margin: 0;
 }
-.app{
+
+.app {
     background-color: #fafafa;
     height: 100vh;
 }
 
-.app__header{
+.app__header {
     background-color: white;
     padding: 20px;
     object-fit: contain;
     border-bottom: 1px solid lightgray;
+}
+
+.app__signup {
+    display: flex;
+    text-align: center;
+    flex-direction: column;
+    margin: 3px;
+}
+
+.app__signupImage {
+    padding-left: 30%;
 }
